[package]
name = "temps-analytics-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
temps-routes = { path = "../temps-routes" }
temps-geo = { path = "../temps-geo" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Web framework
axum = "0.8.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI
utoipa = { version = "5.3.1", features = ["axum_extras"] }

# Utils
lazy_static = "1.5"
woothee = "0.13"
