[package]
name = "temps-analytics-performance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
temps-routes = { path = "../temps-routes" }
temps-geo = { path = "../temps-geo" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Web framework
axum = "0.8.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI
utoipa = { version = "5.3.1", features = ["axum_extras"] }

# Utils
lazy_static = "1.5"
woothee = "0.13"

[dev-dependencies]
maplit = "1.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
