[package]
name = "temps-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
temps-geo = { path = "../temps-geo" }
utoipa = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
