[package]
name = "temps-database"
version = "0.1.0"
edition = "2021"


[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
temps-migrations = { path = "../temps-migrations" }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
testcontainers = { workspace = true }
once_cell = "1.19"

anyhow = { workspace = true }
