[package]
name = "temps-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true


[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
temps-migrations = { path = "../temps-migrations" }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
testcontainers = { workspace = true }
once_cell = "1.19"

anyhow = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
