[package]
name = "temps-deployments"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-blob = { path = "../temps-blob" }
temps-config = { path = "../temps-config" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-deployer = { path = "../temps-deployer" }
temps-entities = { path = "../temps-entities" }
temps-error-tracking = { path = "../temps-error-tracking" }
temps-git = { path = "../temps-git" }
temps-logs = { path = "../temps-logs" }
temps-queue = { path = "../temps-queue" }
temps-providers = { path = "../temps-providers" }
temps-presets = { path = "../temps-presets" }
temps-screenshots = { path = "../temps-screenshots" }
temps-vulnerability-scanner = { path = "../temps-vulnerability-scanner" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
serde_derive = { workspace = true }
anyhow = { workspace = true }
url	= { workspace = true }
octocrab = { workspace = true }
utoipa = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
bollard = { workspace = true }
tar = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
cron = "0.12"
flate2 = { workspace = true }
zip = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
tokio-test = "0.4"
mockall = "0.12"
tokio-tungstenite = "0.24"
tower = { workspace = true }
env_logger = "0.11"
tempfile = "3.8"

[features]
default = []
integration-tests = []
