[package]
name = "temps-email"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-dns = { path = "../temps-dns" }
temps-entities = { path = "../temps-entities" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sea-orm = { workspace = true }

# HTTP client for Scaleway
reqwest = { workspace = true }

# AWS SES
aws-sdk-sesv2 = "1"
aws-config = { workspace = true }

# Web framework
axum = { workspace = true }
axum-macros = { workspace = true }

# OpenAPI
utoipa = { workspace = true }

# Error handling & logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }

# DNS resolution
hickory-resolver = "0.24"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { workspace = true }
temps-migrations = { path = "../temps-migrations" }
